ui/app/css/style.css
/* ... */
h1 {
  font-size: 1.75rem;
  line-height: 1.8rem;
}

h2 {
  font-size: 1.5rem;
  line-height: 1.55rem;
}

h3 {
  font-size: 1.25rem;
  line-height: 1.3rem;
}

h4,
h5,
h6 {
  font-size: 1rem;
  line-height: 1.05rem;
}

p {
  margin: 0 0 1rem;
}

.table {
  width: 100%;
  max-width: 100%;
  margin-bottom: 1rem;
  border: 0px !important;
}

.table th,
.table td {
  border: 0px !important;
  padding: 0.75rem 0.5rem;
  vertical-align: top;
  text-align: left;
  box-shadow: inset 0 -1px 0 0 rgba(31, 59, 69, 0.12);
}

.table th:first-child,
.table td:first-child {
  padding-left: 1rem;
}

.table th:last-child,
.table td:last-child {
  padding-right: 1rem;
}

.table th {
  text-transform: uppercase;
  font-weight: 400;
  color: rgba(31, 59, 6, .48);
  font-size: 0.875rem;
  line-height: 1.25rem;
  vertical-align: bottom;
  box-shadow: inset 0 -2px 0 0 rgba(31, 59, 69, 0.12);
}

.ol-filter {
  position: absolute;
  top: 15px;
  right: 15px;
}

.input-group .pt-input:last-child {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.Select,
.Select div,
.Select input,
.Select span {
  background-color: white;
  z-index: 100;
}

.banner {
  width: 100vw;
  padding: 2rem;
  text-align: center;
  position: fixed;
  z-index: 99;
  bottom: 0;
  background-color: #fff;
  border-top: 1px solid gray;
}

.banner-wrapper {
  display: flex;
  width: 14%;
  margin-left: auto;
  margin-right: auto;
  justify-content: space-between;
}


/* mobile menu */
.navbar-toggle {
  border: 0;
  margin-top: 16px;
}
/* hanko auth and tool menu */
.navbar-nav > li > a.hotosm-tool-menu {
  display: none;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 0;
  padding-right: 0;
}
@media (min-width: 992px) {
  .navbar-nav > li > a.hotosm-tool-menu {
    display: block;
  }
}
.navbar-nav > li > a.hotosm-auth {
  padding: 0px;
}
@media (min-width: 992px) {
  .navbar-nav > li > a.hotosm-auth {
    padding-top: 7px;
    padding-bottom: 7px;
  }
}
      

